force-app/main/default/objects/QuoteLineItem/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <formula>Product2.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test</label>
    <type>Text</type>
</CustomField>