force-app/main/default/objects/QuoteLineItem/fields/Total_Price_inc_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_inc_GST__c</fullName>
    <description>Created by BDD</description>
    <formula>UnitPrice *  Quantity * 1.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price (inc. GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>