force-app/main/default/objects/QuoteLineItem/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <formula>IF(UnitPrice &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp;
IF(ABS(UnitPrice) &gt;= 1000000, TEXT(FLOOR(ABS(UnitPrice) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(UnitPrice) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(UnitPrice) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(UnitPrice))), 3) &amp; &quot;.&quot; &amp;
IF(MOD(ABS(UnitPrice) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(UnitPrice) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(UnitPrice) , 1), 2) * 100, 99))) &amp;
IF(UnitPrice &lt; 0, &quot;)&quot;, &quot;&quot;) &amp; &quot; plus gst&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price</label>
    <type>Text</type>
</CustomField>