force-app/main/default/objects/QuoteLineItem/fields/Unit_Price_inc_GST__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_inc_GST__c</fullName>
    <description>Created by BDD</description>
    <formula>UnitPrice  * 1.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price (inc. GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>